--- a/ghi/src/comments/Comment.css
+++ b/ghi/src/comments/Comment.css
@@ -1,91 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
-
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.Comment-grid {
-  background-color: #cccccc;
-  border-color: black;
-  color: white;
-  height: 20vh;
-  width: 70vh;
-  border-radius: 7px;
-  opacity: 0.8;
+.comment-form {
   margin: 20px;
-  padding-left: 20px;
-  padding-top: 20px;
-  display: grid;
-  grid-template-rows: repeat (4, 1fr);
-  grid-template-columns: repeat (5, 1fr);
+  padding: 10px;
+  max-width: 550px;
+  border-radius: 5px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
-.form-box-shadow {
- box-shadow: rgba(154, 249, 197, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
- background-color: #232b2b;
- margin-top: 20px; 
- padding-top: 10px;
- border-color: #00ff00;
+.text-box {
+  height: 150px;
+  width: 450px;
 }
 
-.comments-hover:hover {
-  transform: rotate(3deg) translate(3%, 0);
-  
-}
-
-
-.whole-page {
-font-family: 'Rubik', sans-serif;
-background-color: #333333;
-}
-
-.text-field {
-  border-color: black;
-  border-radius: 10px;
-  color: black;
-  background-color:#dfe3ee;
-  font-size: 20px;
-  font-family: 'Indie Flower', cursive;
-  font-weight: bold
-}
-
-.form-font {
-  font-family: 'Josefin Sans', sans-serif;
-  color: #b2d8d8;
-}
 
 .form-button {
-  color: #fff;
-  padding: 15px 20px;
-  background-color: #38D2D2;
-  background-image: radial-gradient(93% 87% at 87% 89%, rgba(0, 0, 0, 0.23) 0%, transparent 86.18%), radial-gradient(66% 66% at 26% 20%, rgba(255, 255, 255, 0.55) 0%, rgba(255, 255, 255, 0) 69.79%, rgba(255, 255, 255, 0) 100%);
-  box-shadow: inset -3px -3px 9px rgba(255, 255, 255, 0.25), inset 0px 3px 9px rgba(255, 255, 255, 0.3), inset 0px 1px 1px rgba(255, 255, 255, 0.6), inset 0px -8px 36px rgba(0, 0, 0, 0.3), inset 0px 1px 5px rgba(255, 255, 255, 0.6), 2px 19px 31px rgba(0, 0, 0, 0.2);
-  border-radius: 14px;
-  font-weight: bold;
-  font-size: 14px;
-
-  border: 0;
-
+  align-self: center;
+  background-color: #fff;
+  background-image: none;
+  background-position: 0 90%;
+  background-repeat: repeat no-repeat;
+  background-size: 4px 3px;
+  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
+  box-sizing: border-box;
+  color: #41403e;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Neucha, sans-serif;
+  font-size: 1rem;
+  line-height: 10px;
+  outline: none;
+  padding: .75rem;
+  text-decoration: none;
+  transition: all 235ms ease-in-out;
+  border-bottom-left-radius: 15px 255px;
+  border-bottom-right-radius: 225px 15px;
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+}
 
+.form-button:hover {
+  box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
+  transform: translate3d(0, 2px, 0);
+}
+
+.form-button:focus {
+  box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+}
+
+.reply-delete-edit-button{
+  border: none;
+  background: none;
+  border-radius: 3px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   cursor: pointer;
 }
 
-.title-field {
-  height: 25px;
-  font-size: 16px;
+.comment-box{
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  max-width: 500px;
+  margin: 20px;
+  padding: 8px;
+  border-radius: 6px;
+
 }
+
+
