--- a/ghi/src/parkdetail.css
+++ b/ghi/src/parkdetail.css
@@ -1,25 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 
 body {
-    font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
+}
+
+h4 {
+  margin-top: 0;
 }
 
 .park-name {
-    text-align: center;
-    text-shadow: 1px 2px 3px rgba(0,0,0,0.1);
+  text-align: center;
+  text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.1);
 }
 
 .carousel-center {
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
-    margin-left:  20% !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  margin-left: 20% !important;
 }
 
 .note-font {
-    display: flex;
-    justify-content: flex-start;
-    font-family: 'Indie Flower', cursive !important;
+  display: flex;
+  justify-content: flex-start;
+  font-family: "Indie Flower", cursive !important;
 }
-
