--- a/ghi/src/Trip Notes/tripnote.css
+++ b/ghi/src/Trip Notes/tripnote.css
@@ -135,3 +135,9 @@
 .black-box {
   border: 2px solid black !important;
 }
+
+.note-field {
+  width: 300px;
+  height: 200px;
+  font-family: "Indie Flower" cursive !important;
+}
