--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -1,13 +1,55 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.filter-button {
+  margin: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  padding: 0.5em 1em 0.5em 0.9em;
+  color: white;
+  background: #ad5389;
+  background: linear-gradient(
+    0deg,
+    rgba(20, 167, 62, 1) 0%,
+    rgba(102, 247, 113, 1) 100%
+  );
+  border: none;
+  box-shadow: 0 0.7em 1.5em -0.5em #14a73e98;
+  letter-spacing: 0.01em;
+  border-radius: 15px;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+.filter-button:hover {
+  box-shadow: 0 0.5em 1.5em -0.5em #14a73e98;
+  cursor: pointer;
+}
+.filter-button:active {
+  box-shadow: 0 0.3em 1em -0.5em #14a73e98;
+}
+select {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  flex: 1;
+  font-weight: bold;
+  color: #17ae2c;
+  cursor: pointer;
+  width: 300px;
+  height: 30px;
+  border-radius: 8px;
+  padding: 6px;
+  border: 1px solid #004c4c;
 }
